--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             Check out some recipes we've collected for your home-brewing
             convenienece:
           </p>
-          <div class="recipes__videos">
-            <div>
+          <ul class="recipes__videos">
+            <li>
               <iframe
                 class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
@@ -161,12 +161,10 @@
                 <span>Aeropress Recipe</span>
                 <span>~5 min</span>
               </p>
-            </div>
-            <div>
+            </li>
+            <li>
               <iframe
                 class="recipes__iframe"
-                width="1864"
-                height="780"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="The Ultimate French Press Technique"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -176,8 +174,8 @@
                 <span>French Press Recipe</span>
                 <span>~15 min</span>
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
         <section class="reservation" id="Reservation">
           <h2 class="reservation__title">Book a table</h2>
