--- a/index.html
+++ b/index.html
@@ -247,29 +247,31 @@
             alt="practicum logo"
             class="footer__logo"
           />
-          <h5 class="footer__social-heading">Social media</h5>
-          <ul class="footer__list">
-            <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="facebook logo"
-                  class="footer__social-icon"
-                />
-                Facebook
-              </a>
-            </li>
-            <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="instagram logo"
-                  class="footer__social-icon"
-                />
-                Instagram
-              </a>
-            </li>
-          </ul>
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Social media</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="facebook logo"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="instagram logo"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <p class="footer__copyright">@2022 Cristopher Campos</p>
       </footer>
